# esp32-chromatic-tuner

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  CMakeLists.txt  LICENSE  README.md  pytest_esp32_chromatic_tuner.py  sdkconfig  sdkconfig.defaults
.devcontainer/: devcontainer.json
assembly/: README.md
main/: CMakeLists.txt  OneEuroFilter.h  UserSettings.cpp  UserSettings.h  defines.h  esp32_chromatic_tuner_main.c  esp32_chromatic_tuner_main.cpp  exponential_smoother.hpp  globals.cpp  globals.h  gpio_task.cpp  gpio_task.h  idf_component.yml  main.cpp  pins_heltec.h  pitch_detector_task.cpp  pitch_detector_task.h  rolling_average.hpp  standby_ui_blank.cpp  tuner_controller.cpp  tuner_controller.h  tuner_controller.hpp  tuner_gui_task.cpp  tuner_gui_task.h  tuner_standby_ui_interface.h  tuner_ui_interface.h  tuner_ui_needle.cpp  tuner_ui_needle.h  tuner_ui_strobe.cpp  tuner_ui_strobe.h  user_settings.cpp  user_settings.h
main/fonts/: fontawesome_48.c  raleway_128.c  tuner_font_images.c
main/standby-ui/: standby_ui_blank.cpp  standby_ui_blank.h  tuner_standby_ui_interface.h
main/tuning-ui/: tuner_ui_interface.h  tuner_ui_needle.cpp  tuner_ui_needle.h  tuner_ui_strobe.cpp  tuner_ui_strobe.h
main/utils/: MovingAverage.hpp  OneEuroFilter.cpp  exponential_smoother.hpp  hardware.h  lcd.c
old/: MrMark-512buffer-with-rps-notes.ino  autocorrelation_chromatic_tuner.ino
